smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/conflicting-shape-def.smithy
// shape name `String` conflicts with imported shape `smithy.api#String`
use smithy.api#String

namespace smithy.example

string String
